src/index.css
@import url('https://fonts.googleapis.com/css2?family=M+PLUS+1:wght@400;700&display=swap');

/* Define root variables */
:root {
  --bg-teal: #dfe5e6;
  --dark-gray: #565656;
  --blue: #8197ad;
  --white: white;
  --lavender: #bdbcda;
  --light-gray: #f5f7f8;
  --main-font: 'M PLUS 1', sans-serif;
}

.hidden {
  display: none !important;
}

/* Resets and base styles */
body {
  font-family: var(--main-font);
  background-color: var(--bg-teal);
  color: var(--dark-gray);
  margin: 0;
  text-align: center;
  align-items: center;
}

p, ul, .banner, .banner-header {
  margin: 0;
  padding: 0;
}

ul {
  list-style-type: none;
}

a {
  text-decoration: none;
  color: var(--dark-gray);
}

/* Utility classes for flexbox */
.flex-center {
  display: flex;
  justify-content: center;
  align-items: center;
}

/* Banner and Header */
.banner, .banner-header {
  width: 100%;
  max-height: 175px;
  display: block;
  background-color: var(--white);
}

.banner-footer {
  min-height: 50px;
}

.header {
  position: relative;
  text-align: center;
}

.name-title {
  position: absolute;
  bottom: 0;
  left: 50%;
  transform: translateX(-50%);
  color: white;
  z-index: 2;
  font-size: 3rem;
  margin-bottom: 0.5rem;
  width: 100%;
}

/* Headings */
h2 {
  font-size: 1.5rem;
  background-color: var(--light-gray);
  color: var(--dark-gray);
  padding: 0.5rem;
  margin-top: 1rem;
}

h2.about {
  margin-top: 0;
}

.portfolio-heading {
  cursor: pointer;
  color: var(--dark-gray);
  display: inline-flex;
  align-items: center;
  width: 100%;
  justify-content: center;
}

.portfolio-heading::after {
  content: '\25BC';
  margin-left: 5px;
  transition: transform 0.3s ease;
  font-size: 0.75rem;

  display: inline-block;
    transform: translateY(0.25rem); 
}

.portfolio-heading.expanded::after {
  content: '\25B2';
}

.portfolio-heading:hover {
  color: var(--blue);
}

.headline {
  font-weight: 700;
}

.summary {
  text-align: center;
  margin: 1rem auto;
  max-width: 800px;
}

.summary.body {
  text-align: left;
}

/* Resume Links */
.resume-links {
  display: flex;
  justify-content: center;
  padding: 0 1%;
  width: 98%;
}

.resume-link {
  flex: 1;
  background-color: var(--lavender);
  color: white !important;
  margin: 0 0.625rem;
  padding: 0.625rem;
  border-radius: 0.25rem;
  text-align: center;
}

.resume-link:hover {
  background-color: var(--blue);
  color: white !important;
}

.resume-link a {
  color: white !important;
}

.resume-link:hover a {
  color: white !important;
}

/* Projects */
.portfolio-container ul {
  display: flex;
  flex-wrap: wrap; /* Ensure flex items wrap into multiple columns */
  padding: 0;
  list-style-type: none;
  margin: 0 1rem;
}

.portfolio-container li {
  flex: 1 1 calc(50% - 10px);
  margin: 5px;
  padding: 0.5rem 0;
  box-sizing: border-box;
  border-bottom: 1px solid var(--light-gray);
}

.portfolio-container li:nth-child(odd) {
  margin-right: 0;
}

.portfolio-container li:nth-child(even) {
  margin-left: 0;
}

.portfolio-container li:nth-child(1),
.portfolio-container li:nth-child(2) {
  border-top: 1px solid var(--light-gray);
}

.portfolio-container a {
  color: var(--dark-gray);
}

.portfolio-container a:hover {
  color: var(--blue);
}

.portfolio {
  margin-bottom: 5rem;
}

/* Footer */
.footer {
  position: fixed;
  bottom: 0;
  width: 100%;
  z-index: 10;
  max-height: 69px;
}

.icons {
  display: flex;
  justify-content: center;
  align-items: center;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  z-index: 20;
  min-height: 45px;
}

.icon {
  width: 3rem;
  padding: .25rem 0.25rem 0 0.25rem;
}

/* Responsive adjustments */
@media screen and (max-width: 800px) {
  .icon { width: 2.5rem; }
  .name-title { font-size: 2.5rem; }
  .summary { margin: 1rem; }
}

@media screen and (max-width: 700px) {
  .icon { width: 2rem; }
  .name-title { font-size: 3rem; }
}

@media screen and (max-width: 600px) {
  .name-title { font-size: 2rem; }
  .resume-link { font-size: 0.75rem; }
}

@media screen and (max-width: 500px) {
  li { font-size: 0.75rem; }
}

@media screen and (max-width: 600px) {
  h2 { font-size: 1.25rem; }
  h3, h3::after { font-size: 1rem; }
}

@media screen and (max-width: 500px) {
  h2 { font-size: 1.25rem; }
  h3 { font-size: 1rem; }
}

@media screen and (max-width: 400px) {
  .name-title { font-size: 1.75rem; }
  h2 { font-size: 1rem; }
  h3 { font-size: 0.8rem; }
  body { font-size: 0.8rem; }
}

